--- a/source/less/blocks/nav-back.less
+++ b/source/less/blocks/nav-back.less
@@ -6,8 +6,6 @@
     /* justify-content: center; */
     /* align-items: center; */
     text-align: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
     z-index: 99;
     font-size: 16px;
     width: 150px;
@@ -23,6 +21,9 @@
 }
 
 .nav-back__link {
+    display: block;
+    padding-top: 20px;
+    padding-bottom: 20px;
     text-decoration: none;
     color: white;
 }
