--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -2,7 +2,7 @@
 	/*min-height: 1000px;*/
 	height: 100vh;
 	/*border: 1px solid red;*/
-	background: url('../../img/gif_header.gif');
+	background: url('../img/gif_header.gif');
 	display: flex;
     align-items: flex-end;
 }
