--- a/source/less/blocks/conclusion.less
+++ b/source/less/blocks/conclusion.less
@@ -1,5 +1,10 @@
 .conclusion__inner {
-	height: 55vh;
+	/*height: 55vh;*/
+	padding-bottom: 50px;
+}
+
+.conclusion {
+	padding-bottom: 50px;
 }
 
 .conclusion__link {
