--- a/source/less/blocks/contents.less
+++ b/source/less/blocks/contents.less
@@ -1,20 +1,22 @@
 .contents{
-	height: 100vh;
+	/*height: 100vh;*/
 	display: flex;
 	align-self: center;
 	justify-content: center;
 	flex-direction: column;
-	/*padding-top: 100px;*/
+	padding-top: 100px;
+	margin-bottom: 100px;
 	/*background: linear-gradient(45deg, rgba(126,24,223,1) 0%, rgba(190,170,233,1) 100%);*/
 }
 
 .contents__inner {
-	height: 75vh;
+	/*height: 75vh;*/
 	background-color: rgba(125,125,125,1);
 	color: white;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
+	padding-bottom: 50px;
 }
 
 .contents__header {
